--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,8 @@ body {
 }
 
 .container {
-    width: 1320px;
+    max-width: 1320px;
+    width: 100%;
 }
 
 .header-block {
@@ -24,6 +25,7 @@ body {
     margin-top: 50px;
     padding-bottom: 20px;
     border-bottom: 1px solid #000;
+    gap: 0 120px;
 }
 
 .header-block-title__link {
